--- a/1.haproxy-info.md
+++ b/1.haproxy-info.md
@@ -1,4 +1,4 @@
-## How HAproxy helps improve mysql performance
+# How HAproxy helps improve mysql performance
 
 ### pre test: push to the limit
 
@@ -16,7 +16,7 @@ cpu: 1, ram: 1G
 #- run mysqlslap tool at server2,192.168.1.247
 #- concurrent level 220
 #- iterations 5 : run 5 times and then calculate average.
-#- number-of-queries 30000 : total querys in one test.
+#- number-of-queries 30000 : total queries in one test.
 
 mysqlslap --create-schema=test --user=root --password=xxxxxxx \
 -h 192.168.1.246 -P 3306 \
@@ -49,9 +49,9 @@ Average number of queries per client: 115
 #- increate concurrent level to 280; failed, hanged
 ```
 
-* though cocurrent=220 made system load more than 4.00, server2 survived until concurrent level > 260
+* though concurrent=220 made system load more than 4.00, server2 survived until concurrent level > 260
 
-### Case 1: under high concurrent level
+## Case 1: under high concurrent level
 
 * in the last example, high concurrency cause some hanged queries in mysql server thus lead to low performance.
 
@@ -83,12 +83,13 @@ Number of clients running queries: 300
 Average number of queries per client: 100
 ```
 
-* Oh, average **5.559 seconds**. Quicker than concurrency=260 without HAproxy.
+* Oh, **average 5.559 seconds**. Quicker than concurrency=260 without HAproxy.
 
   HAproxy will certainly use cpu but that is another story.
 
+* continuous tests:
 
-* continuous tests: (seems like maxconn=80 is a better choice of haproxy setting for server1, poor testing machine)
+  (seems like maxconn=80 is a better choice of haproxy setting for server1, poor testing machine)
 
 ```
 #- change haproxy maxconn=100,120,140,180
@@ -119,4 +120,9 @@ Number of clients running queries: 300
 Average number of queries per client: 100
 ```
 
+* ref
+
+http://docs.oracle.com/cd/E17952_01/refman-5.5-en/mysqlslap.html
+
+http://flavio.tordini.org/a-more-stable-mysql-with-haproxy
 
